<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">听诊器</string>
    <string name="action_settings">Settings</string>
    <string name="auscultation">听诊</string>
    <string name="breath_sounds">呼吸音</string>
    <string name="heart_sounds">心音</string>
    <string name="breath_sounds_lib">呼吸音库</string>
    <string name="heart_sounds_lib">心音库</string>
    <string name="medical_records">电子病历</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="confirm">确定</string>
    <string name="edit">编辑</string>
    <string name="title_cancel_medical_record">您正要放弃上一次听诊......</string>
    <string name="cancel_medical_record">放弃请点击取消或者直接返回，确认放弃请点击确定</string>
    <string name="title_activity_auscultation">Auscultation</string>
    <string name="title_activity_breath_sounds">BreathSounds</string>
    <string name="title_activity_heart_sounds">HeartSounds</string>
    <string name="title_activity_media_records">MediaRecords</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_dlg_save_sounds">保存类型</string>
    <string name="content_dlg_save_sounds">您希望保存为心音还是呼吸音</string>
    <string name="new_medical_record">新建电子病历</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="age">年龄</string>
    <string name="tel">联系电话</string>
    <string name="origin">籍贯</string>
    <string name="married">是否已婚</string>
    <string name="has_married">已婚</string>
    <string name="unmarried">未婚</string>
    <string name="diagnosis_time">门诊时间</string>
    <string name="admission_time">入院时间</string>
    <string name="chief_complaint">主诉</string>
    <string name="HPI">现病史</string>
    <string name="past_history">过去史</string>
    <string name="personal_history">个人史</string>
    <string name="hint_name">请在此输入姓名</string>
    <string name="hint_gender">请在此输入性别</string>
    <string name="hint_age">请在此输入年龄</string>
    <string name="hint_tel">请在此输入联系电话</string>
    <string name="hint_origin">请在此输入籍贯</string>
    <string name="hint_chief_complaint">请在此输入主诉病情</string>
    <string name="hint_HPI">请在此输入现在病史</string>
    <string name="hint_past_history">请在此输入过去病史</string>
    <string name="hint_personal_history">请在此输入个人病史</string>
    <string name="hint_lack_name">请输入姓名</string>
    <string name="hint_lack_gender">请选择性别</string>
    <string name="hint_lack_age">请输入年龄</string>
    <string name="more_person_info">更多个人信息</string>
    <string name="less_person_info">收起个人信息</string>
    <string name="confirm_delete">确认删除该条目</string>
    <string name="confirm_delete_person">确认删除该病历</string>
</resources>
