<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TableLayout
            android:textSize="16.0sp"
            android:orientation="vertical"
            android:id="@+id/new_record_form"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="30.0dip">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/name"
                    />

                <EditText
                    android:id="@+id/new_record_name"
                    android:layout_height="fill_parent"
                    android:layout_width="0.0dip"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="16.0sp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_name"
                    />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="30.0dip">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/gender" />

                <RadioGroup
                    android:orientation="horizontal"
                    android:id="@+id/new_record_gender"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="2.0">

                    <RadioButton
                        android:gravity="center"
                        android:id="@id/female"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:text="@string/female"
                        android:layout_weight="1" />

                    <RadioButton
                        android:gravity="center"
                        android:id="@id/male"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:text="@string/male"
                        android:layout_weight="1" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="30.0dip">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/age" />

                <EditText
                    android:textSize="16.0sp"
                    android:gravity="center_vertical"
                    android:id="@+id/new_record_age"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:hint="@string/hint_age"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:focusableInTouchMode="true"/>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="30.0dip">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/tel" />

                <EditText
                    android:textSize="16.0sp"
                    android:gravity="center_vertical"
                    android:id="@+id/new_record_tel"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:hint="@string/hint_tel"
                    android:layout_weight="1"
                    android:inputType="phone" />
            </TableRow>
            <!-- 籍贯 -->
            <TableRow
                android:layout_height="30.0dip"
                android:layout_width="fill_parent">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/origin" />

                <EditText
                    android:id="@+id/new_record_origin"
                    android:layout_height="fill_parent"
                    android:layout_width="0.0dip"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="16.0sp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_origin"
                    />
            </TableRow>
            <!-- 婚否 -->
            <TableRow
                android:layout_height="30.0dip"
                android:layout_width="fill_parent">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/married" />

                <RadioGroup
                    android:orientation="horizontal"
                    android:id="@+id/new_record_married"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="2.0">

                    <RadioButton
                        android:gravity="center"
                        android:id="@+id/married"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:text="@string/has_married"
                        android:layout_weight="1" />

                    <RadioButton
                        android:gravity="center"
                        android:id="@+id/unmarried"
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:text="@string/unmarried"
                        android:layout_weight="1" />
                </RadioGroup>
            </TableRow>
            <!-- 诊断时间-->
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/diagnosis_time" />

                <TextView
                    android:id="@+id/new_record_diagnosis_date"
                    android:layout_height="50.0dip"
                    android:layout_width="0.0dip"
                    android:layout_weight="1"
                    android:textSize="25.0sp"
                    android:gravity="center"
                    />

            </TableRow>
            <!-- 入院时间 -->
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/admission_time" />

                <TextView
                    android:id="@+id/new_record_admission_date"
                    android:layout_height="50.0dip"
                    android:layout_width="0.0dip"
                    android:layout_weight="1"
                    android:textSize="25.0sp"
                    android:gravity="center"
                    />
            </TableRow>
            <!-- 主诉 -->
            <TableRow
                android:minHeight="30.0dip"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/chief_complaint" />

                <EditText
                    android:id="@+id/new_record_chief_complaint"
                    android:minHeight="30.0dip"
                    android:layout_height="wrap_content"
                    android:layout_width="0.0dip"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="16.0sp"
                    android:singleLine="false"
                    android:lineSpacingMultiplier="1.0"
                    android:hint="@string/hint_chief_complaint"
                    />
            </TableRow>
            <!-- 现在病史 -->
            <TableRow
                android:minHeight="30.0dip"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/HPI" />

                <EditText
                    android:id="@+id/new_record_HPI"
                    android:minHeight="30.0dip"
                    android:layout_height="wrap_content"
                    android:layout_width="0.0dip"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="16.0sp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_HPI"
                    />
            </TableRow>
            <!-- 过去病史 -->
            <TableRow
                android:minHeight="30.0dip"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/past_history" />

                <EditText
                    android:id="@+id/new_record_past_history"
                    android:minHeight="30.0dip"
                    android:layout_height="wrap_content"
                    android:layout_width="0.0dip"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="16.0sp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_past_history"
                    />
            </TableRow>
            <!-- 个人病史 -->
            <TableRow
                android:minHeight="30.0dip"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent">

                <TextView
                    android:textSize="16.0sp"
                    android:gravity="center"
                    android:layout_width="100.0dip"
                    android:layout_height="fill_parent"
                    android:text="@string/personal_history" />

                <EditText
                    android:id="@+id/new_record_personal_history"
                    android:minHeight="30.0dip"
                    android:layout_height="wrap_content"
                    android:layout_width="0.0dip"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="16.0sp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_personal_history"
                    />
            </TableRow>
            <!-- 保存或取消按钮 -->
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:textSize="16.0sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:id="@+id/new_record_cancel"
                        android:background="@color/blue"
                        android:layout_width="120.0dip"
                        android:layout_height="40.0dip"
                        android:text="@string/cancel" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:textSize="16.0sp"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:id="@+id/new_record_save"
                        android:background="@color/blue"
                        android:layout_width="120.0dip"
                        android:layout_height="40.0dip"
                        android:text="@string/save" />

                </LinearLayout>
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>