<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- self title -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/blue"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/auscultation_icon" />

        <!--suppress AndroidDomInspection -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/auscultation"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right">

            <ImageView
                android:id="@+id/auscultation_menu"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/menu_icon"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

    <!--  Audio animation  -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="100"
        android:gravity="center">

        <ImageView
            android:id="@+id/audio"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/audio" />
    </LinearLayout>

    <!-- Play button and progress bar -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_recorder"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:soundEffectsEnabled="false"
            android:src="@drawable/record" />

        <!-- ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp" / -->

    </LinearLayout>

    <!-- Save and Cancel button -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/auscult_cancle"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:background="@color/blue"
            android:soundEffectsEnabled="false"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp" />

        <Button
            android:id="@+id/auscult_save"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@color/blue"
            android:soundEffectsEnabled="false"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>